<?xml version="1.0" encoding="utf-8"?>
<androidx.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <Preference
        android:key="com.atom.android.muvik.GET_LOCAL_SONG"
        app:summary="@string/summary_get_local_song"
        app:title="@string/title_get_local_song" />


    <ListPreference
        app:defaultValue="MUSIC"
        app:entries="@array/array_source_input_entry"
        app:entryValues="@array/array_source_input_value"
        app:key="com.atom.android.muvik.INPUT_FORMAT"
        app:title="@string/preferred_output_format"
        app:useSimpleSummaryProvider="true" />


    <Preference
        android:key="com.atom.android.muvik.RESET_SETTING"
        app:summary="@string/summary_restore_string"
        app:title="@string/preferred_reset_setting" />

</androidx.preference.PreferenceScreen>
